--- a/src/app/pages/game/game.component.html
+++ b/src/app/pages/game/game.component.html
@@ -1,7 +1,10 @@
-<div class="container">
+<div class="container-fluid container-game">
     <div class="row">
         <div class="col">
-            
+            <app-header></app-header>
+            <div class="container-board">
+                <app-cards></app-cards>
+            </div>
         </div>
     </div>
 </div>
