--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,600;9..40,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,700&display=swap');
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: 'DM Sans', sans-serif;
+  font-weight: 400;
 }
 
 :focus{
