--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<h1 class="tilte my-3"> Bienvenido, <span class="title__player">{{ playerName }}</span></h1>
+<h1 class="title my-3"> Bienvenido, <span class="title__player">{{ playerName }}</span></h1>
 
 <div class="score-container mb-3">
     <p class="score__board">
